@@ -1,3 +1,8 @@
+[B]2.0.2[/B]
+- Fixed: Special episode placement
+- Fixed: Episode thumbnails only when available
+- Added: Use fallback language for artwork lookup
+
 [B]2.0.1[/B]
 - Fixed: Backwards-compatibility code
 
